test/classes/subclasses/superAccessibility2.good
superAccessibility2.chpl:16: error: Cannot access 'super', 'super' is private to 'Child'
